tests/ui/const-generics/raw-ptr-const-param-deref.min.stderr
error: using raw pointers as const generic parameters is forbidden
  --> $DIR/raw-ptr-const-param-deref.rs:11:23
   |
LL | struct Const<const P: *const u32>;
   |                       ^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool`, and `char`

error: using raw pointers as const generic parameters is forbidden
  --> $DIR/raw-ptr-const-param-deref.rs:13:15
   |
LL | impl<const P: *const u32> Const<P> {
   |               ^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool`, and `char`

error: aborting due to 2 previous errors

